--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "pnpm": "^9.6.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1",
     "yup": "^1.4.0",
     "zustand": "^4.5.4"
   },
