--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.51.11",
@@ -27,6 +28,7 @@
     "formik": "^2.4.6",
     "lucide-react": "^0.408.0",
     "next": "^14.2.5",
+    "nookies": "^2.5.2",
     "pnpm": "^9.6.0",
     "react": "^18",
     "react-dom": "^18",
