--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.408.0",
     "next": "^14.2.5",
     "nookies": "^2.5.2",
+    "npm": "^10.8.2",
     "pnpm": "^9.6.0",
     "react": "^18",
     "react-dom": "^18",
