--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "embla-carousel-react": "^8.1.6",
     "firebase": "^10.12.5",
     "formik": "^2.4.6",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.408.0",
     "next": "^14.2.5",
     "nookies": "^2.5.2",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
