--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@tanstack/react-query": "^5.51.11",
     "@tiptap/extension-bullet-list": "^2.6.6",
     "@tiptap/extension-document": "^2.6.6",
+    "@tiptap/extension-hard-break": "^2.11.5",
+    "@tiptap/extension-heading": "^2.11.5",
     "@tiptap/extension-list-item": "^2.6.6",
     "@tiptap/extension-ordered-list": "^2.6.6",
     "@tiptap/extension-paragraph": "^2.6.6",
